feat: add burger menu and drag and drop modules

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -234,7 +234,7 @@ h1, h2, h3, h4 {
 		li {
 			padding: 2rem;
 			&:hover {
-				background-color: @questions-bg;
+				backgrund-color: @questions-bg;
 			}
 			a {
 				color: inherit;
@@ -278,8 +278,8 @@ h1, h2, h3, h4 {
 
 
 	.file_uplo > button {
-	transition: background 0 0.2s;
-	    border-radius: 50px;
+	    transition: background 0.2s;
+	    	border-radius: 50px;
 	    overflow: hidden;
 	    white-space: nowrap;
 	    text-overflow: ellipsis;
