--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -63,7 +63,6 @@ font-style: normal;
 .PlayfairDisplay() {
 	font-family: 'Playfair Display', serif;;
 }
-
 * {
 	box-sizing: border-box;
 	outline: none;
@@ -249,17 +248,17 @@ h1, h2, h3, h4 {
 	.file_uplo {
 	    position: relative;
 	    overflow: hidden;
-	    font-size: 1em;        /* example */
-	    height: 4em;           /* example */
-	    line-height: 2em       /* the same as height */
+	    font-size: 1em;       
+	    height: 4em;           
+	    line-height: 2em       
 	}
 	.file_uplo > button{
 	    float: right;
-	    width: 8em;            /* example */
+	    width: 8em;            
 	    height: 100%
 	}
 	.file_uplo > div {
-	    padding-left: 1em;   /* example */
+	    padding-left: 1em;   
 	}
 	.file_uplo input[type=file] {
 	    position: absolute;
@@ -268,14 +267,11 @@ h1, h2, h3, h4 {
 	    width: 100%;
 	    height: 100%;
 	    transform: scale(20);
-	    letter-spacing: 10em;     /* IE 9 fix */
-	    -ms-transform: scale(20); /* IE 9 fix */
+	    letter-spacing: 10em;     
+	    -ms-transform: scale(20); 
 	    opacity: 0;
 	    cursor: pointer
 	}
-
-	/* Making it beautiful */
-
 
 	.file_uplo > button {
 	    transition: background 0.2s;
@@ -415,9 +411,6 @@ h1, h2, h3, h4 {
 	max-width: 100%;
 }
 
-
-
-/////////////////////////////////////////////////////////////////
 .slick-active {
 		outline: none;
 	}
@@ -579,17 +572,17 @@ h1, h2, h3, h4 {
 	.file_upload{
 	    position: relative;
 	    overflow: hidden;
-	    font-size: 1em;        /* example */
-	    height: 4em;           /* example */
-	    line-height: 2em       /* the same as height */
+	    font-size: 1em;        
+	    height: 4em;           
+	    line-height: 2em      
 	}
 	.file_upload > button{
 	    float: right;
-	    width: 8em;            /* example */
+	    width: 8em;            
 	    height: 100%
 	}
 	.file_upload > div{
-	    padding-left: 1em      /* example */
+	    padding-left: 1em     
 	}
 	.file_upload input[type=file]{
 	    position: absolute;
@@ -598,13 +591,11 @@ h1, h2, h3, h4 {
 	    width: 100%;
 	    height: 100%;
 	    transform: scale(20);
-	    letter-spacing: 10em;     /* IE 9 fix */
-	    -ms-transform: scale(20); /* IE 9 fix */
+	    letter-spacing: 10em;     
+	    -ms-transform: scale(20); 
 	    opacity: 0;
 	    cursor: pointer
 	}
-
-	/* Making it beautiful */
 
 
 	.file_upload > button{
@@ -1172,17 +1163,17 @@ h1, h2, h3, h4 {
 			.file_uploa {
 			    position: relative;
 			    overflow: hidden;
-			    font-size: 1em;        /* example */
-			    height: 4em;           /* example */
-			    line-height: 2em       /* the same as height */
+			    font-size: 1em;       
+			    height: 4em;           
+			    line-height: 2em       
 			}
 			.file_uploa > button{
 			    float: right;
-			    width: 8em;            /* example */
+			    width: 8em;           
 			    height: 100%
 			}
 			.file_uploa > div {
-			    padding-left: 1em;   /* example */
+			    padding-left: 1em;   
 			}
 			.file_uploa input[type=file] {
 			    position: absolute;
@@ -1191,14 +1182,11 @@ h1, h2, h3, h4 {
 			    width: 100%;
 			    height: 100%;
 			    transform: scale(20);
-			    letter-spacing: 10em;     /* IE 9 fix */
-			    -ms-transform: scale(20); /* IE 9 fix */
+			    letter-spacing: 10em;     
+			    -ms-transform: scale(20); 
 			    opacity: 0;
 			    cursor: pointer
 			}
-
-			/* Making it beautiful */
-
 
 			.file_uploa > button {
 			    transition: background 0.2s;
